# Automated-openEv-Robot

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  warehouse_env.py
server/: app.py
server/templates/: index.html
