[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse-navigation"
version = "1.0.0"
description = "A 2D grid environment for an automated warehouse robot."
dependencies = [
    "numpy>=1.24.0",
    "openai>=1.12.0",
    "flask>=2.0.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"